<resources>
    <string name="app_name">@string/android_design_samples</string>
    <string name="new_account">New Account</string>
    <string name="signup_desc">Start by entering your name and categorie below.</string>

    <string name="login_desc">Enter your login details to access your account</string>
    <string name="log_in">Log In</string>
    <string name="message">This App will send you an SMS message for verification and standard rates apply.. Kindly enter your phone Number</string>

    <string name="reset_pass_message">Seems like you forgot your password for MarksPlus. If this is true, click below to reset your password.</string>
    <string name="android_design_samples">Android Design Samples</string>
    <string name="country_code">+91</string>
    <string name="dev_name">Prasad Vennam</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="continue_login">Continue Login?</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="img">img</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="already_a_member">Already a member?</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create One</string>
    <string name="continue_">Continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="your_password">Your Password</string>
    <string name="product_list">Product List</string>
    <string name="product_price">Price: $%d</string>
    <string name="loading_comments">Loading comments…</string>
    <string name="loading_products">Loading products…</string>
    <string name="search_products_hint">Search Products…</string>
    <string name="cd_products_list">Products list</string>
    <string name="cd_comments_list">Comments list</string>
    <string name="cd_product_name">Name of the product</string>
    <string name="cd_search_products">Search products</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="notifications">Notifications</string>
    <string name="communicate">Communicate</string>
    <string name="get_code">Get Code</string>
</resources>
