<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="sign_up_view_model"
            type="com.volksoftech.sample.viewmodel.SignUpViewModel" />
    </data>

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_color"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backbtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/back"
                android:padding="4dp"
                android:src="@drawable/backbtn" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="26dp"
                android:paddingRight="24dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titletxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text="@string/new_account"
                        android:textColor="#3c4b5d"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/desctxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text="@string/signup_desc"
                        android:textColor="@color/darkgrey"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/userinfo_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/namell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:gravity="center"
                        android:padding="18dp">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/raleway"
                            android:hint="@string/name"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:text="@={sign_up_view_model.input_name}"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/emailll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:gravity="center"
                        android:padding="18dp">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/raleway"
                            android:hint="@string/email"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:text="@={sign_up_view_model.input_email}"
                            android:textSize="14sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/passwordll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:gravity="center"
                        android:padding="18dp">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/raleway"
                            android:hint="@string/password"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:text="@={sign_up_view_model.input_password}"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/phonenumberll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/circularbordersolid"
                        android:gravity="center_vertical"
                        android:padding="15dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/img"
                            android:src="@drawable/indianflag" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/circularbordersolid"
                            android:padding="4dp"
                            android:text="@string/country_code"
                            android:textSize="14sp"
                            android:textStyle="bold" />


                        <EditText
                            android:id="@+id/input_phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/circularbordersolid"
                            android:hint="@string/phonenumber"
                            android:importantForAutofill="no"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:text="@={sign_up_view_model.input_phoneNumber}"
                            android:textSize="14sp" />
                    </LinearLayout>


                    <TextView
                        android:id="@+id/phonenumbertextll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/raleway"
                        android:padding="10dp"
                        android:text="@string/message"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="14dp"
                        android:background="@drawable/circularbluebordersolid"
                        android:fontFamily="@font/raleway_semibold"
                        android:padding="16dp"
                        android:text="@string/continue_"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/verification_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <com.mukesh.OtpView
                        android:id="@+id/verificationcodeet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:itemBackground="@drawable/circularbordersolidsquare"
                        android:padding="15dp"
                        android:textColor="@color/darkgrey"
                        app:itemCount="6"
                        app:lineColor="@color/white"
                        app:viewType="rectangle" />

                    <Button
                        android:id="@+id/verificationcodebtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="14dp"
                        android:background="@drawable/circularbluebordersolid"
                        android:fontFamily="@font/raleway_semibold"
                        android:padding="16dp"
                        android:text="@string/continue_"
                        android:textColor="@color/white" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/link_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text="@string/already_a_member"
                        android:textColor="#3c4b5d"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="#8e9cfe"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>