<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="login_view_model"
            type="com.volksoftech.sample.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_color"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backbtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:padding="4dp"
                android:src="@drawable/backbtn" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="66dp"
                android:paddingRight="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text="@string/log_in"
                        android:textColor="#3c4b5d"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text="@string/login_desc"
                        android:textColor="@color/darkgrey"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circularbordersolidtop"
                    android:gravity="center"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/eloginId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/raleway"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:text="@={login_view_model.loginId}"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circularbordersolidbottom"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/ePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/raleway"
                        android:hint="Your Password"
                        android:inputType="textPassword"
                        android:text="@={login_view_model.password}"
                        android:textSize="14sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/link_forgotpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:gravity="right"
                        android:text="Forgot Password?"
                        android:textColor="#b6bcc5"
                        android:textSize="14sp" />

                </LinearLayout>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/circularbluebordersolid"
                    android:fontFamily="@font/raleway_semibold"
                    android:onClick="@{(v) -> login_view_model.onClick(v)}"
                    android:padding="16dp"
                    android:text="Continue"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/link_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text="No account yet?"
                        android:textColor="#3c4b5d"
                        android:textSize="16dip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:gravity="center"
                        android:text=" Create One"
                        android:textColor="#8e9cfe"
                        android:textSize="16dip" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>